--- a/public/contact.css
+++ b/public/contact.css
@@ -2,13 +2,33 @@ body, html {
     margin: 0;
     padding: 0;
     font-family: Arial, sans-serif;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    height: 100vh;
+}
+section{
+    background-color: white;
 }
 
-header, footer {
+footer {
     background-color: #333;
     color: white;
     text-align: center;
     padding: 10px 0;
+}
+header{
+	position: fixed;
+	top: 0;
+	left: 0;
+	width: 100%;
+	background-color: #333;
+	padding: 10px 0;
+	text-align: cetnter;
+	border-bottom: 5px solid #333;
+	letter-spacing: 2px;
+	word-spacing: 50px;
+
 }
 
 nav ul {
@@ -30,6 +50,7 @@ nav ul li a {
     max-width: 800px;
     margin: auto;
     padding: 20px;
+    line-height: 2;
 }
 
 .form-group {
@@ -39,7 +60,7 @@ nav ul li a {
 .form-group label {
     display: block;
     margin-bottom: 5px;
-}
+} 
 
 .form-group input[type="text"],
 .form-group input[type="email"],
@@ -65,4 +86,22 @@ button:hover {
 
 footer p {
     margin: 0;
+}
+.popup {
+    display: none;
+    position: fixed;
+    right: 50px;
+    bottom: 100px;
+    z-index: 1000;
+    background-color: rgba(255, 255, 255, 0.8);
+    color: black;
+    padding: 20px;
+    border-radius: 5px;
+    width: 300px;
+    height: 80px;
+    cursor: pointer;
+}
+
+#popup-message {
+    text-align: center;
 }
