--- a/public/calculator.css
+++ b/public/calculator.css
@@ -2,30 +2,49 @@ body, html {
     margin: 0;
     padding: 0;
     font-family: Arial, sans-serif;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    height: 100vh;
 }
+header{
+	position: fixed;
+	top: 0;
+	left: 0;
+	width: 100%;
+	background-color: #333;
+	padding: 10px 0;
+	text-align: cetnter;
+	border-bottom: 5px solid #333;
+	letter-spacing: 2px;
+	word-spacing: 50px;
 
-nav {
-    padding: 10px 20px;
+}
+nav ul {
+    list-style-type: none;
+    padding: 0;
+}
+nav ul li {
+    display: inline;
+    margin: 0 15px;
 }
 
 section{
     background-color: white;
+    border-radius: 20px;
 }
-
-.container {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    height: 50vh;
-}
-
-.calculator {
-    width: 50%;
+.section {
+    max-width: 800px;
+    margin: auto;
     padding: 20px;
+    line-height: 2;
 }
 
-.input-group {
-    margin-bottom: 15px;
+.form-group {
+    max-width: 800px;
+    margin: auto;
+    padding: 20px;
+    line-height: 2;
 }
 
 input[type="number"], input[type="text"] {
@@ -43,6 +62,7 @@ button {
     border: none;
     border-radius: 4px;
     cursor: pointer;
+    margin-bottom: 20px;
 }
 
 button:hover {
@@ -58,4 +78,10 @@ button:hover {
     padding: 10px;
     margin-bottom: 5px;
     border-radius: 4px;
+}
+.monthly-section {
+    max-width: 800px;
+    margin: auto;
+    padding: 20px;
+    line-height: 2;
 }
