--- a/public/calculator.css
+++ b/public/calculator.css
@@ -2,50 +2,43 @@ body, html {
     margin: 0;
     padding: 0;
     font-family: Arial, sans-serif;
-    display: flex;
     justify-content: center;
     align-items: center;
     height: 100vh;
 }
-header{
-	position: fixed;
-	top: 0;
-	left: 0;
-	width: 100%;
-	background-color: #333;
-	padding: 10px 0;
-	text-align: cetnter;
-	border-bottom: 5px solid #333;
-	letter-spacing: 2px;
-	word-spacing: 50px;
 
-}
-nav ul {
-    list-style-type: none;
-    padding: 0;
-}
-nav ul li {
-    display: inline;
-    margin: 0 15px;
-}
 
 section{
     background-color: white;
-    border-radius: 20px;
 }
-.section {
+
+
+.container {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    height: 50vh;
+}
+
+
+.calculator {
+    width: 50%;
+    padding: 20px;
+}
+
+
+.input-group {
+    margin-bottom: 15px;
+}
+
+
+.calculator-section {
     max-width: 800px;
     margin: auto;
     padding: 20px;
     line-height: 2;
 }
 
-.form-group {
-    max-width: 800px;
-    margin: auto;
-    padding: 20px;
-    line-height: 2;
-}
 
 input[type="number"], input[type="text"] {
     width: 100%;
@@ -55,6 +48,7 @@ input[type="number"], input[type="text"] {
     border-radius: 4px;
 }
 
+
 button {
     padding: 10px 20px;
     background-color: #007bff;
@@ -62,26 +56,22 @@ button {
     border: none;
     border-radius: 4px;
     cursor: pointer;
-    margin-bottom: 20px;
 }
+
 
 button:hover {
     background-color: #0056b3;
 }
 
+
 #expensesList {
     margin-top: 20px;
 }
+
 
 .expense-item {
     background-color: #f4f4f4;
     padding: 10px;
     margin-bottom: 5px;
     border-radius: 4px;
-}
-.monthly-section {
-    max-width: 800px;
-    margin: auto;
-    padding: 20px;
-    line-height: 2;
 }
