--- a/public/home.css
+++ b/public/home.css
@@ -37,10 +37,11 @@ nav ul li a {
     background-size: cover;
 }
 
-.about-section {
+.welcome {
     max-width: 800px;
     margin: auto;
     padding: 20px;
+    line-height: 2;
 }
 
 footer p {
