--- a/public/indexstyle.css
+++ b/public/indexstyle.css
@@ -11,21 +11,15 @@ body {
 	background-image: url(images/Home-Background.jpg);
 	background-size: cover;
 }
-.main {
-	background-color: white;
-	border-radius: 15px;
-	box-shadow: 0 0 20px rgba(0, 0, 0, 0.2);
-	padding: 10px 20px;
-	transition: transform 0.2s;
-	width: 500px;
-	text-align: center;
-}
+
 h1 {
 	color: black;
 	text-shadow: 1px 1px 2px rgba(0, 0, 0, 0.5);
+	text-align: center;
 }
 p {
 	font-weight: bold;
+	text-align: center;
 }
 
 label {
@@ -58,10 +52,12 @@ button {
 	color: black;
 	cursor: pointer;
 	background-color: pink;
-	width: 100%;
+	width:100%;
 	font-size: 1em;
 	transition: 1s;
+	text-align: center;
 }
+
 button:hover{
 	background-color: rgb(200, 117, 131);
 }
@@ -80,13 +76,15 @@ button:hover{
 	border-radius: 15px;
 	margin-top: 15px;
 	margin-bottom: 15px;
-	color: black;
+	border: none;
+	color: rgb(0, 0, 0);
 	cursor: pointer;
 	background-color: pink;
 	width: 90%;
-	font-size: 15px;
+	font-size: 1em;
 	transition: 1s;
-  }
+	text-align: center;
+}
 .box:hover {
 	background-color: rgb(200, 117, 131);
 }
@@ -95,8 +93,7 @@ section{
 	width: 300px;
 	height: 450px;
 	padding: 20px;
-}
-  
+}  
 header{
 	position: fixed;
 	top: 0;
@@ -143,11 +140,6 @@ footer{
 	text-align: center;
 }
 
-.wrap {
-	display: flex;
-	justify-content: center;
-	align-items: center;
-}
 .overlay {
 	position: fixed;
 	top: 0;
@@ -163,17 +155,21 @@ footer{
 	visibility: visible;
 	opacity: 1;
 }
-  
+
+a {
+	color: black;
+	text-decoration: none;
+}
 .popup {
 	margin: 70px auto;
 	padding: 20px;
 	background: #fff;
+	color: black;
 	border-radius: 5px;
 	width: 30%;
 	position: relative;
 	transition: all 5s ease-in-out;
 }
-  
 .popup h2 {
 	margin-top: 0;
 	color: #333;
@@ -197,11 +193,3 @@ footer{
 	overflow: auto;
 }
   
-@media screen and (max-width: 700px){
-	.box{
-	  width: 70%;
-	}
-	.popup{
-	  width: 70%;
-	}
-}
